# anpr-cpp-app

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  config.json  parking_app.yml  parking_cpp.yml  template.json
dockerfiles/: Dockerfile-base  Dockerfile-dev
src/: Config.cpp  ITimer.h  Main.cpp  Template.cpp
src/app/: BaseCarTracker.cpp  BaseCarTracker.h  CalibParams.cpp  CalibParams.h  CameraScope.cpp  CameraScope.h  Car.cpp  Car.h  Constants.h  Counter.h  Detection.cpp  Detection.h  DetectionEngine.cpp  DetectionEngine.h  DetectionService.cpp  DetectionService.h  LPRecognizer.cpp  LPRecognizer.h  LPRecognizerService.cpp  LPRecognizerService.h  LicensePlate.cpp  LicensePlate.h  MaskCarTracker.cpp  MaskCarTracker.h  TemplateMatching.cpp  TemplateMatching.h  TensorRTDeleter.h  TensorRTEngine.cpp  TensorRTEngine.h  TrtLogger.h
src/car_model/: CarTypeClassifier.cpp  CarTypeClassifier.h  Labels.h  MMCClassifier.cpp  MMCClassifier.h  MobileNet.cpp  MobileNet.h  MobileNetV2.cpp  MobileNetV2.h  VehicleRecognizer.cpp  VehicleRecognizer.h
src/client/: CameraClientLauncher.h  GstreamerReader.cpp
src/package_sending/: ImageWriterService.cpp  ImageWriterService.h  Package.cpp  Package.h  PackageSender.cpp  PackageSender.h  SnapshotSender.cpp  SnapshotSender.h
src/vehicle_detector/: CarDetection.cpp  CarDetection.h  CarDetectionEngine.cpp  CarDetectionEngine.h  CarDimensions.cpp  CarDimensions.h
